--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.204.0",
+    "@aws-cdk/aws-cognito": "^1.204.0",
     "@aws-cdk/aws-dynamodb": "^1.204.0",
     "@aws-cdk/aws-lambda": "^1.204.0",
     "@aws-sdk/client-s3": "^3.216.0",
